 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

PIG-3191: [piggybank] MultiStorage output filenames are not sortable (Danny Antonelli via jcoveney)

PIG-3174:  Remove rpm and deb artifacts from build.xml (gates)

IMPROVEMENTS

PIG-2959: Add a pig.cmd for Pig to run under Windows (daijy)

PIG-3311: add pig-withouthadoop-h2 to mvn-jar (julien)

PIG-2873: Converting bin/pig shell script to python (vikram.dixit via daijy)

PIG-3308: Storing data in hive columnar rc format (maczech via daijy)

PIG-3303: add hadoop h2 artifact to publications in ivy.xml (julien)

PIG-3169: Remove intermediate data after a job finishes (mwagner via cheolsoo)

PIG-3173: Partition filter push down does not happen when partition keys condition include a AND and OR construct (rohini)

PIG-2786: enhance Pig launcher script wrt. HBase/HCat integration (ndimiduk via daijy)

PIG-3198: Let users use any function from PigType -> PigType as if it were builtlin (jcoveney)

PIG-3268: Case statement support (cheolsoo)

PIG-3269: In operator support (cheolsoo)

PIG-200: Pig Performance Benchmarks (daijy)

PIG-3261: User set PIG_CLASSPATH entries must be prepended to the CLASSPATH, not 
appended (qwertymaniac via daijy)

PIG-3141: Giving CSVExcelStorage an option to handle header rows (jpacker via cheolsoo)

PIG-3217: Add support for DateTime type in Groovy UDFs (herberts via daijy)

PIG-3218: Add support for biginteger/bigdecimal type in Groovy UDFs (herberts via daijy)

PIG-3248: Upgrade hadoop-2.0.0-alpha to hadoop-2.0.3-alpha (daijy)

PIG-3235: Add log4j.properties for unit tests (cheolsoo)

PIG-3236: parametrize snapshot and staging repo id (gkesavan via daijy)

PIG-3244: Make PIG_HOME configurable (robert.schooley@gmail.com via daijy)

PIG-3233: Deploy a Piggybank Jar (njw45 via cheolsoo)

PIG-3245: Documentation about HBaseStorage (Daisuke Kobayashi via cheolsoo)
