@@ -28,6 +28,8 @@ PIG-3174:  Remove rpm and deb artifacts from build.xml (gates)
 
 IMPROVEMENTS
 
+PIG-3321: AVRO: Support user specified schema on load (harveyc via rohini)
+
 PIG-2959: Add a pig.cmd for Pig to run under Windows (daijy)
 
 PIG-3311: add pig-withouthadoop-h2 to mvn-jar (julien)
